--- a/Thesis_Latex/content/chapter-introduction.tex
+++ b/Thesis_Latex/content/chapter-introduction.tex
@@ -1,4 +1,4 @@
-% !TEX root = ../thesis-example.tex
+% !TEX root = ../chrysalis-report.tex
 %
 \chapter{Introduction}
 \label{sec:intro}
@@ -34,14 +34,14 @@ TODO our task: refine that system, show that it can be made compatible with mode
 \textbf{Chapter \ref{sec:init}} \\[0.2em]
 In the first content chapter, we will explain the way Chrysalis generally functions. Starting from an abstract and high-level view where the intended uses of the application are explained, we will the continue to detail the components that make up Chrysalis - what their role in the system is, how they interact with each other and with what external components they interface. At last, we will describe how business processes are modeled inside a blockchain node, so that our application may interact with them in a defined way.
 
-\textbf{Chapter \ref{sec:system}} \\[0.2em]
+\textbf{Chapter \ref{sec:impr}} \\[0.2em]
 This chapter being the biggest of all, we intend to describe our programming work done here. This includes all improvements, additions and removals in the code. To do this, for every major task we will first describe its meaning and implications, then give a modeler's overview of the changes done. Where needed, we will give some technical insights to our work. Concluding every task as well as the entire chapter, we will summarize our results.
 
 \textbf{Chapter \ref{sec:issues}} \\[0.2em]
 Given that this project wasn't intended to be perfected once our work was done, and also given that some problems arose that hampered the quality of our results, this chapter will describe said issues. We will both clarify where they stem from and propose some ways of solving them, so those who will be handed this project may fix them with relative ease.
 
 \textbf{Chapter \ref{sec:caterpillar}} \\[0.2em]
-TODO
+In this chapter we evaluate our project with respect to another blockchain-based process model execution system named Caterpillar. We will give an overview of its architecture, point out important features of both its compilation-based and interpretation-based versions, as well as compare it with CHRYSALIS both featurewise and performancewise.
 
 \textbf{Chapter \ref{sec:res}} \\[0.2em]
 Due to the project having grown in complexity during our work on it, we decided to build a repository of design documents and other helpful files. In this short section, we intend to present these resources.
