Bugfixes and more Guides

--- a/Thesis_Latex/content/chapter-general-architecture.tex
+++ b/Thesis_Latex/content/chapter-general-architecture.tex
@@ -16,7 +16,7 @@ From the user's point of view, three interactions with the system are generally 
 	\centering
 	\captionsetup{justification=centering,margin=2cm}
 	\includegraphics[height=0.7\textwidth]{gfx/bpmn2bc}
-	\caption{Layer structure of the original \emph{Chrysalis} System.}
+	\caption{Workflow and artifacts created during process deployment and execution.}
 	\label{fig:init:usage:bpm}
 \end{figure}
 
