--- a/Thesis_Latex/content/titlepages.tex
+++ b/Thesis_Latex/content/titlepages.tex
@@ -58,7 +58,7 @@
 	\end{minipage}
 	\hspace*{15pt}
 	\begin{minipage}[t]{.65\textwidth}
-		\thesisFirstSupervisor\ and \thesisSecondSupervisor
+		\thesisFirstSupervisor\ 
 	\end{minipage} \\[10mm]
 
 	\thesisDate \\
@@ -75,7 +75,7 @@
 	\textit{\thesisTitle} \\
 	\thesisSubject, \thesisDate \\
 	Reviewers: \thesisFirstReviewer\ and \thesisSecondReviewer \\
-	Supervisors: \thesisFirstSupervisor\ and \thesisSecondSupervisor \\[1.5em]
+	Supervisors: \thesisFirstSupervisor\ \\[1.5em]
 	\textbf{\thesisUniversity} \\
 	\textit{\thesisUniversityGroup} \\
 	\thesisUniversityInstitute \\
