completed sans citations

--- a/Thesis_Latex/content/chapter-general-architecture.tex
+++ b/Thesis_Latex/content/chapter-general-architecture.tex
@@ -56,6 +56,6 @@ To store and interact with data on the blockchain in a defined way, the Blockcha
 
 \begin{itemize}
     \item \emph{Transparent logic:} Since the process logic is defined in the smart contract, every peer has a transparent definition of how a process may be changed - in extension, we define that a process may never be changed outside contract definitions.
-    \item \emph{Security:} Since a contract is the only way to interact with the process, every peer may check on the validity of a proposed contract invocation. As peers have to agree on Blockchain interactions before they are written, the trust issue mentioned in TODO is solved.
+    \item \emph{Security:} Since a contract is the only way to interact with the process, every peer may check on the validity of a proposed contract invocation. As peers have to agree on Blockchain interactions before they are written, the trust issue mentioned in section \ref{sec:intro} is solved.
     \item \emph{Data handling:} The smart contract either internally memorizes the location of deployed process models ir translates external keys into their location. Either way, the contract abstracts memory addresses inside the Blockchain away for the user and the developer.
 \end{itemize}
