--- a/Thesis_Latex/bib-refs.bib
+++ b/Thesis_Latex/bib-refs.bib
@@ -1,53 +1,14 @@
-@online{WEB:GNU:GPL:2010,
-	Author = {{Free Software Foundation, Inc.}},
-	Title = {GNU General Public License},
-	Url = {http://www.gnu.org/licenses/gpl.html},
-	Urldate = {2011-05-27},
-	Year = {2010}}
+@online{hyperledger,
+	Author = {{Hyperledger, The Linux Foundation}},
+	Title = {Hyperledger Fabric: A Blockchain Platform for the Enterprise},
+	Url = {https://hyperledger-fabric.readthedocs.io/},
+	Urldate = {2021-08-05},
+	Year = {2020}}
 
-@online{WEB:Miede:2011,
-	Author = {Andr{\'e} Miede},
-	Title = {A Classic Thesis Style by Andr{\'e} Miede},
-	Url = {http://www.miede.de/index.php?page=classicthesis},
-	Urldate = {2011-05-27},
-	Year = {2011}}
 
-@book{Jurgens:2000,
+@book{chrysalis,
 	Author = {Manuela J{\"u}rgens},
 	Publisher = {FernUniversit{\"a}t Gesamthochschule in Hagen},
 	Title = {LaTeX: eine Einf{\"u}hrung und ein bisschen mehr},
 	Year = {2000}}
 
-@book{Jurgens:1995,
-	Author = {Manuela J{\"u}rgens},
-	Publisher = {FernUniversit{\"a}t Gesamthochschule in Hagen},
-	Title = {LaTeX: Fortgeschrittene Anwendungen},
-	Year = {1995}}
-
-@manual{Miede:2011,
-	Author = {Andr{\'e} Miede},
-	Title = {A Classic Thesis Style: An Homage to The Elements of Typographic Style},
-	Year = {2011}}
-
-@book{Kohm:2011,
-	Author = {Markus Kohm and Jens-Uwe-Morawski},
-	Title = {KOMA-Script: Die Anleitung},
-	Year = {2011}}
-
-@book{Apple:keynote:2010,
-	Author = {{Apple Inc.}},
-	Publisher = {{Apple Inc.}},
-	Title = {Keynote '09 User Guide},
-	Year = {2010}}
-
-@book{Apple:numbers:2010,
-	Author = {{Apple Inc.}},
-	Publisher = {{Apple Inc.}},
-	Title = {Numbers '09 User Guide},
-	Year = {2010}}
-
-@book{Apple:pages:2010,
-	Author = {{Apple Inc.}},
-	Publisher = {{Apple Inc.}},
-	Title = {Pages '09 User Guide},
-	Year = {2010}}
