--- a/Thesis_Latex/content/chapter-improvements.tex
+++ b/Thesis_Latex/content/chapter-improvements.tex
@@ -3,7 +3,7 @@
 \chapter{Improvements}
 \label{sec:impr}
 
-This chapter is split into the 4 programming tasks we were given to improve the \emph{Chrysalis} system and is therefore the place where we present the work we've done.
+This chapter is split into the 4 programming tasks we were given to improve the \emph{Chrysalis} system and is therefore the place where we present most of the work we've done.
 \begin{itemize}
     \item \textbf{Chapter \ref{sec:impr:enzian}:} Restructuring the System to make it easier to maintain and expand.
     \item \textbf{Chapter \ref{sec:impr:persistence}:} Adding a persistence layer that stores information outside the browser and the Blockchain.
