--- a/Thesis_Latex/bib-refs.bib
+++ b/Thesis_Latex/bib-refs.bib
@@ -1,14 +1,14 @@
 @online{hyperledger,
 	Author = {{Hyperledger, The Linux Foundation}},
-	Title = {Hyperledger Fabric: A Blockchain Platform for the Enterprise},
-	Url = {https://hyperledger-fabric.readthedocs.io/},
+	Title = {Hyperledger Fabric Documentation},
+	Url = {https://hyperledger-fabric.readthedocs.io/en/release-2.2/},
 	Urldate = {2021-08-05},
 	Year = {2020}}
 
 
-@book{chrysalis,
-	Author = {Manuela J{\"u}rgens},
-	Publisher = {FernUniversit{\"a}t Gesamthochschule in Hagen},
-	Title = {LaTeX: eine Einf{\"u}hrung und ein bisschen mehr},
-	Year = {2000}}
+@misc{chrysalis,
+	Author = {Christian Sturm},
+	Publisher = {University of Bayreuth},
+	Title = {CHRYSALIS},
+	Year = {2021}}
 
