--- a/Thesis_Latex/content/chapter-introduction.tex
+++ b/Thesis_Latex/content/chapter-introduction.tex
@@ -3,9 +3,10 @@
 \chapter{Introduction}
 \label{sec:intro}
 
+
 In times of digitalization, \emph{Business Process Management} (BPM) systems play a central role in efficiently orchestrating and executing business processes automatically. State-of-the-art systems use a centralized program, the BPM \emph{Engine}, to offer this functionality. While this concept has proven itself for single-organization BPM, applying the same central system to a inter-organizational process leads to trust issues: With only one engine controlling all processes with absolute authority, it is difficult to ensure that the administrator of said system doesn't illegally influence the deployed processes for their own gain. \newline 
  The project \emph{Chrysalis} seeks to eliminate this trust issue caused by a centralized BPM engine by instead deploying and running this engine on a Blockchain network, which is naturally decentralized, offers more transparency to it's peers and only allows for changes, if they're approved by a consensus mechanism. \newline
- \emph{Chrysalis} was developed in tandem with the paper [TODO cite] as a proof-of-concept prototype and handed to us for improvement in this project.
+ \emph{Chrysalis} was developed in tandem with the paper \cite{chrysalis} as a proof-of-concept prototype and handed to us for improvement in this project.
 
 
 \section{Problem Statement}
