--- a/Thesis_Latex/content/subchapter-improvements-hyperledger.tex
+++ b/Thesis_Latex/content/subchapter-improvements-hyperledger.tex
@@ -3,9 +3,10 @@
 \section{Hyperledger-based Application}
 \label{sec:impr:hl}
 
-TODO cite hl
 
-With the interfaces needed to easily expand the system being in place, we deemed it a good next step to add another Blockchain protocol. Specifically, we chose \emph{Hyperledger}. The application was successfully expanded with all necessary components built and tested, although the front-end still has problems trying to pack this new addition and sending it to the user's browser. This issue is elaborated in section \ref{sec:issues:integration}. This chapter will focus on firstly giving a broad overview of Hyperledger in section \ref{sec:impr:hl:basics} and then following up with detailing the implemented expansion in the later sections.
+
+With the interfaces needed to easily expand the system being in place, we deemed it a good next step to add another Blockchain protocol. Specifically, we chose \emph{Hyperledger}. The application was successfully expanded with all necessary components built and tested, although the front-end still has problems trying to pack this new addition and sending it to the user's browser. This issue is elaborated in section \ref{sec:issues:integration}. This chapter will focus on firstly giving a broad overview of Hyperledger in section \ref{sec:impr:hl:basics} and then following up with detailing the implemented expansion in the later sections. \newline
+All information about Hyperledger and how it is used was sourced from the documentation version 2.2 at \cite{hyperledger}.
 
 \subsection{Hyperledger as a Ledger Protocol}
 \label{sec:impr:hl:basics}
