--- a/Thesis_Latex/bib-refs.bib
+++ b/Thesis_Latex/bib-refs.bib
@@ -12,3 +12,15 @@
 	Title = {CHRYSALIS},
 	Year = {2021}}
 
+@misc{caterpillar,
+	Author = {Orlenys López-Pintado and Luciano García-Bañuelos and Marlon Dumas and Ingo Weber and Alex Ponomarev},
+	Publisher = {University of Tartu},
+	Title = {Caterpillar: A Business Process Execution Engine on the Ethereum Blockchain},
+	Year = {2019}}
+
+@misc{caterpillarv3,
+	Author = {Orlenys López-Pintado and Luciano García-Bañuelos and Marlon Dumas and Ingo Weber},
+	Publisher = {University of Tartu},
+	Title = {Interpreted Execution of Business Process Models on Blockchain},
+	Year = {2019}}
+
