--- a/Thesis_Latex/content/chapter-introduction.tex
+++ b/Thesis_Latex/content/chapter-introduction.tex
@@ -13,7 +13,7 @@ In times of digitalization, \emph{Business Process Management} (BPM) systems pla
 \label{sec:intro:problem}
 
 \emph{Chrysalis}, in it's initial state, offered the basic functionality of a BPM engine using a browser-based front-end, deploying and utilizing logic on the \emph{Ethereum} blockchain in a private network. However, as it was made to be a prototype, room for expansions and feature introductions hadn't been a priority so far. \newline
-Our Task therefore is to refine \emph{Chrysalis} by overhauling it's architecture, extending it's features and following the steps necessary to make the system run efficiently. By that, we intend to make \emph{Chrysalis} more compatible with modern systems and demonstrate that it can fulfil the typical demands of users. \newline
+Our task therefore is to refine \emph{Chrysalis} by overhauling it's architecture, extending it's features and following the steps necessary to make the system run efficiently. By that, we intend to make \emph{Chrysalis} more compatible with modern systems and demonstrate that it can fulfil the typical demands of users. \newline
 
 \section{Results}
 \label{sec:intro:results}
@@ -26,13 +26,14 @@ All given tasks were completed as specified, with the exception of the \emph{Hyp
 \label{sec:intro:structure}
 
 \textbf{Chapter \ref{sec:init}} \\[0.2em]
-In the first content chapter, we will explain the way Chrysalis generally functions. Starting from an abstract and high-level view where the intended uses of the application are explained, we will the continue to detail the components that make up Chrysalis - what their role in the system is, how they interact with each other and with what external components they interface. At last, we will describe how business processes are modeled inside a blockchain node, so that our application may interact with them in a defined way.
+In the first content chapter, we will explain the way Chrysalis generally works. Starting from an abstract and high-level view where the intended uses of the application are explained, we will the continue to detail the components that make up Chrysalis - what their role in the system is, how they interact with each other and with what external components they interface. At last, we will describe how business processes are modeled inside a blockchain node, so that our application may interact with them in a defined way.
 
 \textbf{Chapter \ref{sec:impr}} \\[0.2em]
-This chapter being the biggest of all, we intend to describe our programming work done here. This includes all improvements, additions and removals in the code. To do this, for every major task we will first describe its meaning and implications, then give a modeler's overview of the changes done. Where needed, we will give some technical insights to our work. Concluding every task as well as the entire chapter, we will summarize our results.
+Here we intend to describe the programming work we have done. This includes all improvements, additions and removals in the code. To do this, for every major task we will first describe its meaning and implications, then give a modeler's overview of the changes done. Where needed, we will give some technical insights to our work. Concluding every task as well as the entire chapter, we will summarize our results.
 
 \textbf{Chapter \ref{sec:issues}} \\[0.2em]
 Given that this project wasn't intended to be perfected once our work was done, and also given that some problems arose that hampered the quality of our results, this chapter will describe said issues. We will both clarify where they stem from and propose some ways of solving them, so those who will be handed this project may fix them with relative ease.
+\pagebreak
 
 \textbf{Chapter \ref{sec:caterpillar}} \\[0.2em]
 In this chapter we evaluate our project with respect to another blockchain-based process model execution system named Caterpillar. We will give an overview of its architecture, point out important features of both its compilation-based and interpretation-based versions, as well as compare it with CHRYSALIS both featurewise and performancewise.
