--- a/Thesis_Latex/content/chapter-resources.tex
+++ b/Thesis_Latex/content/chapter-resources.tex
@@ -9,13 +9,13 @@ With us introducing this many structures to the project, the overall size of \em
 Some applications require special files to be set up, like the \emph{Ethereum} Blockchain, which needs a 'genesis block' containing configurations to begin a new Blockchain. Since we had to custom-create such a genesis block, we will provide it - and any other configuration file we encounter - in the sub-directory 'config'.
 
 \textbf{Setup Guides} \\[0.2em]
-Since \emph{Chrysalis} as grown quite a bit from our work and requires quite a few steps to set up, we are providing a setup guide inside the directory 'setup'. \newline
+Since \emph{Chrysalis} has grown quite a bit from our work and requires quite a few steps to set up, we are providing a setup guide inside the directory 'setup'. \newline
 Also, when setting up new instances of the project or updating them to a new iteration, a lot of installations, CLI commands and configuration steps were necessary. We opted to write these commands and some meta-information about them into text files, so we could quickly copy and paste them when we needed them, instead of having to search or type them again. Adding a little more formatting and explanations, we're making these files available inside 'setup' as well.
 
 \textbf{Useful Links} \\[0.2em]
-Since we sourced a lot of our knowledge about the systems we implemented from their authors - like Hyperledger, for example - we will provide the links to those knowledge bases in a folder or file named 'links'.
+Since we sourced a lot of our knowledge about the systems we implemented from their authors - like Hyperledger, for example - we will provide the links to those knowledge bases in a folder or file named 'links'. However most of these Links are already provided in the general setup guide.
 
 \textbf{Other Documentation} \\[0.2em]
-This paper and it's source material is also situated inside 'chrysalis-resources' in the 'Thesis\_Latex' folder.
+This document and it's source material is also situated inside 'chrysalis-resources' in the 'Thesis\_Latex' folder.
 
 
