--- a/Thesis_Latex/content/subchapter-improvements-restructure.tex
+++ b/Thesis_Latex/content/subchapter-improvements-restructure.tex
@@ -3,8 +3,8 @@
 \section{Restructuring the Code}
 \label{sec:impr:enzian}
 
-With the \emph{Chrysalis} system only being a prototype when it was handed to us, code quality had not been a focus so far. To mend this, we were tasked to make way for future expansions and changes to the codebase by generally improving it's architecture. \newline
-Since the front-end component \emph{Chrysalis} looked fairly well-built and flexible, we focused on the underlying \emph{Enzian-Yellow}, updating Chrysalis only accordingly when a signature change elsewhere made it necessary.
+With the \emph{Chrysalis} system only being a prototype when it was handed to us, code quality had not been a focus so far. To mend this, we were tasked to make way for future extensions and changes to the codebase by generally improving it's architecture. \newline
+Since the front-end component \emph{Chrysalis} looked fairly well-built and flexible, we focused on the underlying \emph{Enzian-Yellow} layer, updating Chrysalis only accordingly when a interface change elsewhere made it necessary.
 
 \begin{figure}[h]
 	\centering
@@ -17,7 +17,7 @@ Since the front-end component \emph{Chrysalis} looked fairly well-built and flex
 As seen in figure \ref{fig:impr:enzian:original}, the architecture of \emph{Enzian-Yellow} consists of three parts, giving us the following understanding:
 \begin{itemize}
     \item On the top, the name-giving class \emph{EnzianYellow} is the interface to the applications that use it (like \emph{Chrysalis}): It offers BPM-related methods like creating new processes or tasks and executing the latter, independent of the underlying Blockchain specifics. When constructed, it also instantiates \emph{BasicEnzianYellow} and \emph{Web3Wrapper}.
-    \item \emph{BasicEnzianYellow}, as the name might suggest, is a specialization of \emph{EnzianYellow} (though not inheriting from it), offering the same kind of method signature as it's 'parent', but translating these BPM actions into the corresponding Blockchain-transactions. To make these transactions, it sometimes calls the \emph{Web3Wrapper} and sometimes directly queries the \emph{Web3} instance within.
+    \item \emph{BasicEnzianYellow}, as the name might suggest, is a specialization of \emph{EnzianYellow} (though not inheriting from it), offering the same kind of method signature as its 'parent', but translating these BPM actions into the corresponding Blockchain-transactions. To execute these transactions, it sometimes calls the \emph{Web3Wrapper} and sometimes directly queries the \emph{Web3} instance within.
     \item \emph{Web3Wrapper} wraps, as the name indicates, an instance of the class \emph{Web3}, which is the API used to connect and interact with a local \emph{Ethereum} node. It offers functions like deploying contracts, however doesn't fully implement all BPM functionality that \emph{EnzianYellow} offers.
 \end{itemize}
 
@@ -27,7 +27,7 @@ From the given structure, as well as some other observations, the following issu
 \nopagebreak
     \item The \textbf{Dependencies} in the code do not follow a strict hierarchy in the sense of a layer-based architecture, with each layer offering abstraction to and fully satisfying the functional demands of the layer above (Section \ref{sec:impr:enzian:dep}).
     \item In many places, multiple methods with different parameters have the same effect, allowing for \textbf{code duplicates}. Additionally, \textbf{construction} does sometimes not imply object initialization, leaving room for hard-to-explain errors and 'zombie states' (Section \ref{sec:impr:enzian:sig}).
-    \item It is not immediately clear, where an \textbf{Expansion}, like adding another Blockchain protocol, would be tied into (Section \ref{sec:impr:enzian:exp}). 
+    \item It is not immediately clear, where an \textbf{Extension}, like adding another Blockchain protocol, would be tied into (Section \ref{sec:impr:enzian:exp}). 
     \item The overall \textbf{Transparency}, especially via log outputs, should be improved (Section \ref{sec:impr:enzian:log}).
 \end{itemize}
 
@@ -42,7 +42,7 @@ From the given structure, as well as some other observations, the following issu
 	\label{fig:impr:enzian:dependencies}
 \end{figure}
 
-In a fully layered architecture, as we meant to achieve, one layer should never interact with another layer except that above and below. In \emph{Enzian-Yellow} that was not entirely the case. For example, the \emph{Web3Wrapper} object would do interactions with the Blockchain using the contained \emph{Web3} interface, yet the 'parent' object, \emph{BasicEnzianYellow}, would also directly access \emph{Web3}, essentially skipping the wrapper entirely. While this pattern is functional, it is hard to maintain when changes are made to a component, as abstractions of layers are not strict and changes therefore may affect more layers. To achieve a more strict layer-architecture, the following was done:
+In a fully layered architecture, as we meant to achieve, one layer should never interact with another layer except that above and below. In \emph{Enzian-Yellow} that was not entirely the case. For example, the \emph{Web3Wrapper} object would do interactions with the Blockchain using the contained \emph{Web3} interface, yet the 'parent' object, \emph{BasicEnzianYellow}, would also directly access \emph{Web3}, essentially skipping the wrapper entirely. Although this pattern is functional, it is hard to maintain when changes are made to a component, as abstractions of layers are not strict and changes therefore may affect more layers. To achieve a more strict layer-architecture, the following was done:
 \begin{itemize}
     \item To fulfill every component's requirements towards lower layers, the first layer underneath was extended to offer all necessary methods, removing the need for layer-skipping.
     \item Code was moved to the specific place where it was meant to be, e.g. actions that required using \emph{Web3} would only be allowed inside the \emph{Web3Wrapper}.
@@ -53,7 +53,7 @@ In a fully layered architecture, as we meant to achieve, one layer should never 
 \subsection{Method and Object Signatures}
 \label{sec:impr:enzian:sig}
 
-In the prototype system, code was significantly scattered and duplicated, offering the same functionality multiple times with differing parameters, like the example shown in figure \ref{fig:impr:enzian:sig-pre}. As this affects maintainability negatively, we sought to eliminate such redundancies wherever possible.
+In the prototype system, code was significantly scattered and duplicated, offering the same functionality multiple times with different parameters, like the example shown in figure \ref{fig:impr:enzian:sig-pre}, which we will use to showcase the changes done to the codebase. As this scatter affects maintainability negatively, we sought to eliminate such redundancies wherever possible.
 
 \begin{figure}[h]
 	\centering
@@ -80,7 +80,7 @@ With the described changes, the previous example was reduced to the method signa
 \subsection{Interface for Expansions}
 \label{sec:impr:enzian:exp}
 
-With the codebase cleaned up with the methods and principles described in the previous sections, it makes sense to tackle the next design question: How and where should an expansion to the existing system implemented?
+With the codebase cleaned up with the methods and principles described in the previous sections, it makes sense to tackle the next design question: How and where should an extension to the existing system be implemented?
 
 \begin{figure}[h]
 	\centering
@@ -90,7 +90,7 @@ With the codebase cleaned up with the methods and principles described in the pr
 	\label{fig:impr:enzian:expansion}
 \end{figure}
 
-As the introduced naming scheme might have already hinted, the perfect way to put an expansion into the current system would be to offer replacements for \emph{EthereumEnzianYellow} that can fill it's signatures. In figure \ref{fig:impr:enzian:expansion} we sketched this as a proper interface, but note that JavaScript as a language does not support such constructs and is weakly typed, meaning that any object with the same method names and signatures may already replace \emph{EthereumEnzianYellow}, no inheritance or implementations needed.
+As the introduced naming scheme might have already hinted, the perfect way to put an expansion into the current system would be to offer replacements for \emph{EthereumEnzianYellow} that can fill it's signatures. In figure \ref{fig:impr:enzian:expansion} we sketched this as a proper interface, but note that JavaScript as a language does not support such constructs and is weakly typed, meaning that any object with the same method names and signatures may replace \emph{EthereumEnzianYellow}, no inheritance or implementations needed.
 
 Expanding the \emph{EnzianYellow} module with a new Blockchain of type 'x' is therefore quite simple: One must only make their 'xEnzianYellow' known to the parent class, \emph{EnzianYellow}, and define under which circumstances this new Blockchain application may be used. We opted for a simple constant, passed down to \emph{EnzianYellow} as a string to configure it. If "ethereum" (or, in fact, nothing) is passed for example, \emph{EthereumEnzianYellow} will be selected.
 
